# LibFlaps

./: InputPlan.txt  README.md  de.egwagi.Libflaps.flatpak  de.egwagi.Libflaps.json  meson.build
data/: de.egwagi.Libflaps.appdata.xml.in  de.egwagi.Libflaps.desktop.in  de.egwagi.Libflaps.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: lib_draw.py  lib_io.py  lib_menu.py  lib_toolbar.py  libflaps.gresource.xml  libflaps.in  libflaps_test_window.ui  libflaps_toolbar.ui  library.py  main.py  meson.build  style.css  test.py  tmp.py
